--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "resend": "^3.5.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
